scheduled messages and events working through update and create

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
  *= require theme/style
  *= require theme/blue
  *= important_persons
+ *= require simple_calendar
  *= require_tree .
  *= require_self
  */
