--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -15,7 +15,7 @@
 
   <div class ="event-reminder">
     <%= label_tag :reminder %>
-    <%= datetime_local_field :event, :reminder %>
+    <%= datetime_local_field :event, :reminder, required: true %>
   </div>
 
   <div class="event-description">
