--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -21,7 +21,7 @@
 
     <div>
       <%= label_tag :scheduled_time %>
-      <%= datetime_local_field :message, :scheduled_time %>
+      <%= datetime_local_field :message, :scheduled_time, required: true %>
     </div>
 
     <div>
