--- a/app/views/user_mailer/Wedding.html.erb
+++ b/app/views/user_mailer/Wedding.html.erb
@@ -50,7 +50,7 @@
                                 <table border="0" cellpadding="20" cellspacing="0" width="100%" id="emailFooter">
                                     <tr>
                                         <td width="75%">
-                                            <a href="*|UNSUB|*">Unsubscribe from this list.</a>
+                                            Wedding Template
                                         </td>
                                         <td style="font-size:0; line-height:0;">&nbsp;
                                             <img src="https://cdn0.iconfinder.com/data/icons/seo-smart-pack/128/grey_new_seo-15-512.png" height="60px" width="90px" alt="Email Icon" style="display: block;">
