--- a/app/assets/stylesheets/css_overide.css.scss
+++ b/app/assets/stylesheets/css_overide.css.scss
@@ -17,6 +17,9 @@
 //   // opacity; 0.4;
 // }
 
+.navbar-brand{
+  text-align: left;
+}
 
 body {
   padding: 60px 0px;
@@ -24,12 +27,9 @@ body {
   box-sizing: border-box;
   overflow: hidden;
   overflow-y: scroll;
-}
+  background-image: url("lightpaperfibers.png");
 
-// div[role="main"]{
-//   overflow-y: scroll;
-//   height: 100%;
-// }
+}
 
 .footer-after{
   padding: 20px;
