--- a/app/views/important_persons/show.html.erb
+++ b/app/views/important_persons/show.html.erb
@@ -1,39 +1,33 @@
-<div class="section-header">
-  <div class="container">
-    <div class="row">
+<div class="col-md-12 col-sm-12" id="ip-show-header">
+  <h1><%= @important_person.full_name %></h1>
+</div>
 
-      <div class="col-lg-12">
-        <h1 class="page-header"><%= @important_person.full_name %></h1>
-      </div>
-
-    </div>
-  </div> <!-- /.container -->
-</div> <!-- /.section-colored -->
-
-<div class="container container-int">
-
-  <ol class="breadcrumb">
-    <li><a href="/">Home</a></li>
-    <li><a href="/important_persons">Important People</a></li>
-    <li class="active"><%= @important_person.full_name %></li>
-  </ol>
+<div class="ip-show-container">
   
-  <div class="row">
+  <div class="row" id="ip-show-row-top">
 
     <div class="col-md-8">
       <img class="img-responsive-ip-show" src="<%= @important_person.image_url %>" alt= <%= @important_person.full_name %>>
     </div>
 
-    <div class="col-md-4">   
-        <%= form_tag '/events/new', method: :get do %>
-          <%= hidden_field_tag :important_person_id, @important_person.id %>
-          <%= submit_tag "Create New Event", class: "btn btn-primary", id: "ip-events-button" %>
-        <% end %>
-      
+    <div class="col-md-4" id="ip-show-info"> 
+      <h3>Email: <span><%= @important_person.email %></span></h3>
+      <h3>Phone: <span><%= @important_person.phone_number %></span></h3>
+      <p><span><%= link_to "Edit Person", "/important_persons/#{@important_person.id}" %> &nbsp
+        <%= link_to "Delete Person", "/important_persons/#{@important_person.id}", method: :delete, data:{confirm: "Are you sure you want to delete this person?"} %></span></p>
+    </div>
+
+  </div>
+
+  <div class="row" id="ip-show-row-middle">
+    <div class="col-md-4">  
+      <%= form_tag '/events/new', method: :get do %>
+        <%= hidden_field_tag :important_person_id, @important_person.id %>
+        <%= submit_tag "Create New Event", class: "btn btn-primary", id: "ip-events-button" %>
+      <% end %>
     </div>
 
     <div class="col-md-4">
-      
         <%= form_tag '/wishlist_items/new', method: :get do %>
           <%= hidden_field_tag :important_person_id, @important_person.id %>
           <%= submit_tag "Create New Wishlist Item",class: "btn btn-primary", id: "ip-wishlist-items-button" %>
@@ -48,34 +42,12 @@
         <% end %>
       </a>
     </div>
-    </div>
-
   </div>
 
-  <div class="col-md-">
-    <h3><small>Email</small></h3>
-    <small><%= @important_person.email %></small>
-    <h3><small>Phone</small></h3>
-    <p><small><%= @important_person.phone_number %></small></p>
-  </div>
-    
+  <div class="row" id="ip-show-row-bottom">
 
-<% @events.each do |event| %>
-  <h5>Upcoming Event: <%= link_to event.name, "/events/#{event.id}" %> </h5>
-<% end %>
-<% @wishlist_items.each do |wishlist_item| %>
-  <h5>Wishlist Items: <%= link_to wishlist_item.item_name, "/wishlist_items/#{wishlist_item.id}" %></h5>
-<% end %>
-<% @messages.each do |message| %>
-  <h5>Messages: <%= link_to message.title, "/messages/#{message.id}" %></h5>
-<% end %>
-
-
-
-  <div class="row">
-
-    <div class="col-sm-4 col-xs-6">
-      <h3 class="events-header">Upcoming Events</h3>
+    <div class="col-sm-4 col-xs-6" id="ip-show-events-list">
+      <h2 class="events-header">Upcoming Events</h2>
         <div class="overlay-portfolio">
           <% @events.each do |event| %>
             <h5><%= link_to event.name, "/events/#{event.id}" %> </h5>
@@ -84,26 +56,25 @@
       </a>
     </div>
 
-    <div class="col-sm-4 col-xs-6">
-      <h3 class="wishlist-items-header">Wishlist Items</h3>
+    <div class="col-sm-4 col-xs-6" id="ip-show-wishlist-list">
+      <h2 class="wishlist-items-header">Wishlist Items</h2>
         <div class="overlay-portfolio">
           <% @wishlist_items.each do |wishlist_item| %>
-            <h5>Wishlist Items: <%= link_to wishlist_item.item_name, "/wishlist_items/#{wishlist_item.id}" %></h5>
+            <h5><%= link_to wishlist_item.item_name, "/wishlist_items/#{wishlist_item.id}" %></h5>
           <% end %>
         </div><!-- /.overlay-portfolio -->
       </a>
     </div>
 
-    <div class="col-sm-4 col-xs-6">
-      <h3 class="messages-header">Scheduled Messages</h3>
+    <div class="col-sm-4 col-xs-6" id="ip-show-messages-list">
+      <h2 class="messages-header">Scheduled Messages</h2>
         <div class="overlay-portfolio">
           <% @messages.each do |message| %>
-            <h5>Messages: <%= link_to message.title, "/messages/#{message.id}" %></h5>
+            <h5><%= link_to message.title, "/messages/#{message.id}" %></h5>
           <% end %>
         </div><!-- /.overlay-portfolio -->
       </a>
     </div>
 
   </div>
-
 </div><!-- /.container -->
