--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,27 +1,44 @@
-
-<div>
-  <h1><%= @profile %></h1>
+<div class="col-md-12 col-sm-12" id="messages-index-header">
+  <h1>Messages</h1>
 </div>
 
-<h1>Messages</h1>
-
 <% @messages.each do |message| %>
-  
+
+<div class="messages-index-container">
+
+  <div class="row" id="messages-index-row">
+
   <% if current_user.id == message.important_person.user_id %>
-    <div>
+    
+    <div class="col-md-7 col-sm-7" id="messages-index-info">
       <h1><%= link_to message.important_person.full_name, "/important_persons/#{message.important_person.id}" %></h1>
-      <h3><%= link_to message.title, "/messages/#{message.id}" %></h3>
-      <p><%= message.message_capitalize %></p>
-      <p><%= message.pretty_scheduled_time %></p>
-      <p><%= message.user_message %></p>
+
+      <img class="img-responsive-messages-index" src="<%= message.important_person.image_url %>" alt="An image has not been added for this important person">
     </div>
 
-    <div>
-      <%= link_to "New", "/messages/select" %>
-      <%= link_to "Edit", "/messages/#{message.id}/edit" %>
-      <%= link_to "Delete", "/messages/#{message.id}", method: :delete, data:{confirm: "Are you sure you want to delete this wishlist?"} %>
+    <div class="col-md-5 col-sm-5" id="messages-index-info">
+
+      <h1><%= link_to message.title, "/messages/#{message.id}" %></h1>
+      <p><bold>Message Type: </bold><%= message.message_capitalize %></p>
+      
+      <% if message.scheduled_time == nil %>
+        <p><%= link_to "Add Scheduled Time", "/messages/#{message.id}" %></p>
+      <% else %>
+        <p><%= message.pretty_scheduled_time %></p>
+      <% end %>
+    </div>
+        
+    <div class="row" id="messages-index-ned">
+      <div class="col-md-7 col-sm-7">
+        <p><%= link_to "New", "/messages/select" %>
+        <%= link_to "Edit", "/messages/#{message.id}/edit" %>
+        <%= link_to "Delete", "/messages/#{message.id}", method: :delete, data:{confirm: "Are you sure you want to delete this message?"} %></p>
+      </div>
     </div>
 
   <% end %>
+    </div>
+  </div>
+</div>
   
 <% end %>
