--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,3 +1,5 @@
+
+
 <% if @message_type == "email" %>
 
   <h1>Send A New Email</h1>
@@ -21,7 +23,7 @@
 
     <div class="scheduled-time">
       <%= label_tag :scheduled_time %>
-      <%= datetime_local_field :message, :scheduled_time %>
+      <%= datetime_local_field :message, :scheduled_time, required: true %>
     </div>
 
     <div>
@@ -38,6 +40,11 @@
 <% elsif @message_type == "text" %>
   
   <h1>Send A New Text</h1>
+
+  <div class="title">
+    <%= label_tag :title %>
+    <%= text_field_tag :title %>
+  </div>
 
   <%= form_tag "/messages", method: :post do %>
 
@@ -67,6 +74,11 @@
   <h1>Send A New Tweet</h1>
 
   <%= form_tag "/messages", method: :post do %>
+
+    <div class="title">
+      <%= label_tag :title %>
+      <%= text_field_tag :title %>
+    </div>
 
     <div class="message">
       <%= label_tag :user_message %>
