--- a/app/views/wishlist_items/index.html.erb
+++ b/app/views/wishlist_items/index.html.erb
@@ -1,38 +1,52 @@
-<h1>Wishlist Items</h1>
+<div class="col-md-12 col-sm-12" id="ip-wishlist-header">
+  <h1>Wishlist Items</h1>
+</div>
 
 <% @wishlist_items.each do |wishlist_item| %>
-  <h1><%= link_to wishlist_item.important_person.full_name, "/important_persons/#{wishlist_item.important_person.id}" %></h1>
+  
+  <div class="ip-wishlist-container">
 
-  <h4><%= link_to wishlist_item.item_name, "/wishlist_items/#{wishlist_item.id}" %></h4>
+    <div class="row" id="wishlist-index-row">
 
-   <div>
-     <% if wishlist_item.item_url == "" %>
-       <%= link_to "Add Item URL", "/wishlist_items/#{wishlist_item.id}/edit" %>
-     <% else %>
-       <p>Item Link: <%= link_to "Buy Here", wishlist_item.item_url %></p>
-     <% end %>
-   </div>
+      <div class="col-md-7 col-sm-7" id="wishlist-index-item">
+        
+        <h1><%= link_to wishlist_item.item_name + " for " + wishlist_item.important_person.full_name, "/wishlist_items/#{wishlist_item.id}" %></h1>
 
-   <div>
-     <% if wishlist_item.image_url == "" %>
-       <%= link_to "Add Image URL", "/wishlist_items/#{wishlist_item.id}/edit" %>
-     <% else %>
-       <img src ="<%= wishlist_item.image_url %>" class="img-responsive">
-     <% end %>
-   </div>
+        <% if wishlist_item.image_url == "" %>
+          <p><%= link_to "Add Image URL", "/wishlist_items/#{wishlist_item.id}/edit" %></p>
+        <% else %>
+          <img class="img-responsive-wishlist-index" src ="<%= wishlist_item.image_url %>">
+        <% end %>
 
-   <div>
-     <% if wishlist_item.description == "" %>
-       <%= link_to "Add Description", "/wishlist_items/#wishlist_item.id}/edit" %>
-     <% else %>
-       <p>Description: <%= wishlist_item.description %></p>
-     <% end %>
-   </div>
-   
-   <div>
-      <%= link_to "New", "/wishlist_items/new" %>
-      <%= link_to "Edit", "/wishlist_items/#{wishlist_item.id}/edit" %>
-      <%= link_to "Delete", "/wishlist_items/#{wishlist_item.id}", method: :delete, data:{confirm: "Are you sure you want to delete this wishlist?"} %>
+      </div>
+
+      <div class="col-md-5 col-sm-5" id="wishlist-index-info">
+
+        <% if wishlist_item.item_url == "" %>
+          <p><%= link_to "Add Item URL", "/wishlist_items/#{wishlist_item.id}/edit" %></p>
+        <% else %>
+          <p><%= link_to "Buy Here", wishlist_item.item_url %></p>
+        <% end %>
+
+        <% if wishlist_item.description == "" %>
+          <p><%= link_to "Add Description", "/wishlist_items/#wishlist_item.id}/edit" %></p>
+        <% else %>
+          <p>Description: <%= wishlist_item.description %></p>
+        <% end %>
+
+        <a class="btn btn-primary" href="/wishlist_items/<%=wishlist_item.id%>" id="wishlist-index-button">View Item Details</a>
+
+      </div>
+         
+      <div class="row" id="wishlist-index-ned">
+        <div class="col-md-7 col-sm-7">
+          <p><%= link_to "New", "/wishlist_items/new" %>
+          <%= link_to "Edit", "/wishlist_items/#{wishlist_item.id}/edit" %>
+          <%= link_to "Delete", "/wishlist_items/#{wishlist_item.id}", method: :delete, data:{confirm: "Are you sure you want to delete this wishlist?"} %></p>
+        </div>
+      </div>
+
     </div>
+  </div>
 
 <% end %>
